<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_article_24px"
            android:title="@string/title_news"/>

    <item
            android:id="@+id/navigation_trend"
            android:icon="@drawable/ic_whatshot_24px"
            android:title="@string/title_trend"/>

    <item
            android:id="@+id/navigation_data"
            android:icon="@drawable/ic_timeline_24px"
            android:title="@string/title_data"/>

    <item
            android:id="@+id/navigation_graph"
            android:icon="@drawable/link"
            android:title="@string/title_graph"/>

    <item
            android:id="@+id/navigation_people"
            android:icon="@drawable/ic_people_24px"
            android:title="@string/title_people"/>

</menu>
