<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_news">

    <fragment
            android:id="@+id/navigation_news"
            android:name="com.example.duyufeng.ui.home_news.NewsFragment"
            android:label="@string/title_news"
            tools:layout="@layout/fragment_news">
    </fragment>


    <fragment
            android:id="@+id/navigation_trend"
            android:name="com.example.duyufeng.ui.trend.TrendFragment"
            android:label="@string/title_trend"
            tools:layout="@layout/fragment_trend"/>

    <fragment
            android:id="@+id/navigation_data"
            android:name="com.example.duyufeng.ui.data.DataFragment"
            android:label="@string/title_data"
            tools:layout="@layout/fragment_data"/>

    <fragment
            android:id="@+id/navigation_graph"
            android:name="com.example.duyufeng.ui.graph.GraphFragment"
            android:label="@string/title_graph"
            tools:layout="@layout/fragment_graph"/>

    <fragment
            android:id="@+id/navigation_people"
            android:name="com.example.duyufeng.ui.people.PeopleFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_people"/>
</navigation>