<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:stretchColumns="*">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/region"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textRegion"
                    android:textAlignment="center"
                    android:gravity="center|center_vertical"
                    android:textColor="#000000"
                    android:maxWidth="32dp"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textConfirmed"
                        android:textAlignment="center" android:textColor="#BE0D00" android:maxWidth="26dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textDeaths"
                        android:textAlignment="center" android:textColor="#9D000000"
                        android:textAllCaps="false" android:maxWidth="26dp" android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/cured"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textCured"
                        android:maxWidth="26dp"
                        android:textAlignment="center" android:textColor="#00AD07" android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <View
            android:layout_width="wrap_content"
            android:layout_height="5dp" android:layout_weight="1"/>
    <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"  android:layout_weight="1"
            android:background="#000000"/>
    <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"  android:layout_weight="1"/>

</LinearLayout>

